# worktreeflow

./: .dockerignore  .editorconfig  .gitignore  .worktreeflow.example.toml  LICENSE  Makefile  PROJECTS.md  README.md  RELEASE.md  efficiency_improvements_report.md  lefthook.yml  pyproject.toml  wtf
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
analysis/: python-vs-rust.md
bugs/: README.md  b01.md  b02.md  b03.md  b04.md  b05.md  b06.md  b07.md  b08.md  b09.md  b10.md  b11.md  b12.md
scripts/: bump_version.py
src/worktreeflow/: __init__.py  cli.py  config.py  errors.py  logger.py  manager.py  validator.py  wtf.py
tests/: conftest.py  test_bash_command_logger.py  test_branch_parsing.py  test_cli.py  test_config.py  test_configurable_prefix.py  test_error_handling.py  test_manager.py  test_merge_base.py  test_new_features.py  test_quiet_verbose.py  test_safety_validator.py  test_shell_escaping.py
